--- a/reverseproxy/nginx.conf
+++ b/reverseproxy/nginx.conf
@@ -31,10 +31,11 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
-        location / {
-            root /usr/share/nginx/html/dist;
-            index index.html;
-            try_files $uri $uri/ /index.html;
+        location /kibana/ {
+            # Kibanaプロキシ設定 (basePath: /kibana)
+            proxy_pass http://kibana:5601/kibana/;
+            proxy_set_header Host $host;
+            proxy_read_timeout 60s;
         }
 
         location /api/ {
@@ -55,6 +56,12 @@ http {
             access_log off;
             try_files $uri /404.jpg;
             dav_methods PUT DELETE MKCOL COPY MOVE; 
+        }
+
+        location / {
+            root /usr/share/nginx/html/dist;
+            index index.html;
+            try_files $uri $uri/ /index.html;
         }
 
         location ~ /\.$ {
