--- a/elk/kibana/config/kibana.yml
+++ b/elk/kibana/config/kibana.yml
@@ -4,6 +4,8 @@
 #
 server.name: kibana
 server.host: 0.0.0.0
+server.basePath: /kibana
+server.rewriteBasePath: true
 elasticsearch.hosts: [http://elasticsearch:9200]
 
 monitoring.ui.container.elasticsearch.enabled: true
