--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,6 +3,9 @@ services:
     image: postgres:16-alpine
     container_name: "rdbms"
     restart: on-failure
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -29,8 +32,12 @@ services:
       context: .
       dockerfile: static-builder/Dockerfile
       target: development
+      network: host
     container_name: "static-builder"
     restart: on-failure
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     environment:
       - VITE_API_URL
       - VITE_WEBSOCKET_URL
@@ -55,6 +62,9 @@ services:
     container_name: "reverseproxy"
     restart: on-failure
     image: nginx:1.26.1-alpine
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     ports:
       - "80:80"
     volumes:
@@ -75,8 +85,12 @@ services:
       context: .
       dockerfile: api/Dockerfile
       target: deploy_asgi
+      network: host
     container_name: "api"
     restart: on-failure
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     networks:
       - net_pong
     volumes:
@@ -111,6 +125,9 @@ services:
   in_memory_db:
     container_name: "in_memory_db"
     image: redis:7.4.2
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     networks:
       - net_pong
     healthcheck:
