--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,9 @@ services:
   rdbms:
     image: postgres:16-alpine
     container_name: "rdbms"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -19,9 +22,6 @@ services:
       retries: 5
     expose:
       - "5432"
-    # TODO: 提出前にPORTを閉じる
-    ports:
-      - "5432:5432"
     networks:
       - net_pong
 
@@ -33,6 +33,7 @@ services:
       args:
         - VITE_API_URL
         - VITE_WEBSOCKET_URL
+      network: host
     container_name: "static-builder"
     volumes:
       - vol_static_builder:/usr/src/vite
@@ -40,8 +41,10 @@ services:
   reverseproxy:
     container_name: "reverseproxy"
     image: nginx:1.26.1-alpine
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     ports:
-      - "80:80"
       - "443:443"
     volumes:
       - ./reverseproxy/ssl/:/etc/ssl/
@@ -64,7 +67,11 @@ services:
       context: .
       dockerfile: api/Dockerfile
       target: deploy_asgi
+      network: host
     container_name: "api"
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     expose:
       - "8000"
     networks:
@@ -103,11 +110,11 @@ services:
   in_memory_db:
     container_name: "in_memory_db"
     image: redis:7.4.2
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     networks:
       - net_pong
-    # TODO: 提出前にPORTを閉じる
-    ports:
-      - "6379:6379"
     healthcheck:
       test: ["CMD-SHELL", "redis-cli ping | grep PONG"]
       interval: 1s
