--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,9 @@ DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=pass
 SECRET_KEY='8j3o2c@xo^@)evj7es4i2)v*zcoht2zb=ce@l00&z3v8&r$)j='
 
+##################
+# Static Builder #
+##################
 VITE_API_URL=https://localhost:8002
 VITE_WEBSOCKET_URL=wss://localhost:8002
 
