--- a/elk/docker-compose.yml
+++ b/elk/docker-compose.yml
@@ -39,8 +39,8 @@ services:
         ELASTIC_VERSION: ${ELASTIC_VERSION}
     volumes:
       - ./elk/kibana/config/kibana.yml:/usr/share/kibana/config/kibana.yml:ro
-    expose:
-        - 5601
+    # ports:
+      # - 5601:5601
     environment:
       KIBANA_SYSTEM_PASSWORD: ${KIBANA_SYSTEM_PASSWORD:-}
     networks:
